# assemblylineos

./: .gitignore  README.md  raspi_browser_launcher.py  run_service.py  setup_browser_service.py  setup_service.py
arduino/: README_test_scripts.md  test_firmware.py
arduino/assembly_line_control/: README.md  SETUP.md  assembly_line_control.ino
src/assembly_line_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/assembly_line_control/assembly_line_control/: arduino_controller.py  motor_controller.py  relay_controller.py  sensor_controller.py  web_interface.py
src/assembly_line_control/launch/: assembly_line_control.launch.py  web_interface.launch.py
src/assembly_line_control/static/: styles.css
src/assembly_line_control/static/js/: activeBlocksPanel.js  app.js  blockConnector.js  blockRenderer.js  blockSystem.js  config.js  executionEngine.js  motorSpeedManager.js  playbackEngine.js  rosBridge.js  settingsManager.js  simulation_engine.js  storageManager.js  uiUtils.js  workflowManager.js
src/assembly_line_control/templates/: index.html
